# E-Commerce-FastAPI

./: .gitignore  README.md  main_main.py  pyproject.toml  sales.db
backend/: app.py  auth.py  cart.py  crud.py  database.py  logging.py  models.py  operations.py  products.py  schemas.py  users.py
database/: ecommerce.db
tests/: test_auth.py  test_cart.py  test_operations.py  test_orders.py
