[tool.poetry]
name = "ambev-e-commerce"
version = "0.1.0"
description = "Later"
authors = ["Felipe Oliveira <fp.ramos.oliveira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
