[tool.poetry]
name = "ambev-e-commerce"
version = "0.1.0"
description = "A simple e-commerce API"
authors = ["Felipe Oliveira <fp.ramos.oliveira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
passlib = "^1.7.4"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
testpaths = ["tests"]  # Path to the test directory

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
